...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/favourite_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_white_24dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:padding="@dimen/image_btn_padding"/>

            <Button
                android:id="@+id/my_favorites_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/my_favorites"
                android:textColor="@color/white"
...
