<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lullabies</string>
    <string name="author" translatable="false">by AshomokDev</string>
    <string name="appID" translatable="false">ca-app-pub-5221781428763224~4451105598</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_categories">Categories</string>
    <string name="browse_categories_subtitle">Songs by categories</string>
    <string name="browse_musics_by_hierarchy_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>

    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id" translatable="false">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str" translatable="false">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="get_no_ads_forever">Get no ads forever</string>
    <string name="about_app">About app</string>
    <string name="notification_channel" translatable="false">Lullabies_Channel_ID</string>
    <string name="notification_channel_description" translatable="false">Channel ID for Lullabies</string>
    <string name="lullabies_main_activity_base_collection_banner" translatable="false">ca-app-pub-5221781428763224/3093632356</string>
    <string name="full_screen_activity_banner" translatable="false">ca-app-pub-5221781428763224/1164543404</string>
    <string name="lullabies_main_activity_mom_songs_banner" translatable="false">ca-app-pub-5221781428763224/6789972464</string>
    <string name="lullabies_main_activity_classic_tones_banner" translatable="false">ca-app-pub-5221781428763224/4035198062</string>
    <string name="test_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="cancel">Cancel</string>
    <string name="buy_ads_free">Buy ads free</string>
    <string name="ads_free_forever">Ads free forever</string>
    <string name="remove_ads">Remove ads</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="rate_app">Rate app</string>
    <string name="home">Home</string>
    <string name="contact_me">Contact me:</string>
    <string name="privacy_policy_agreement">Privacy Policy agreement</string>
    <string name="privacy_policy_explanation">Using this app you agreed with our Privacy Policy.</string>
    <string name="my_email" translatable="false">ashomokdev@gmail.com</string>
    <string name="version">version</string>
    <string name="copied">Copied</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="connectivity_error">Connectivity error!</string>
    <string name="exit">Exit</string>
    <string name="exit_dialog_title">Do you want to exit?</string>
    <string name="ok">OK</string>
    <string name="times_app_was_used" translatable="false">times_app_was_used</string>
    <string name="enjoying_music">Enjoying the Music?</string>
    <string name="not_really">Not really</string>
    <string name="preferences" translatable="false">preferences</string>
    <string name="yes">Yes!</string>
    <string name="propose_download_app_package_name" translatable="false">com.ashomok.lullabies_classics</string>
    <string name="propose_download_app_dynamic_link" translatable="false">https://ashomok.page.link/fFWD</string>
    <string name="our_other_aps">Our other aps</string>
    <string name="download_app_name">Lullaby Classic Music for Kids and Babies Relax 0+</string>
    <string name="how_about_rating">How about a rating on the Play Market, then?</string>
    <string name="no_thanks">No, thanks</string>
    <string name="ok_sure">OK, sure</string>
    <string name="classic_key">Classic</string>
    <string name="ad_attribution" translatable="false">AD</string>
    <string name="mom_songs_key">Mom</string>
    <string name="my_favorites">My Favourites</string>
    <string name="empty_collection">Empty collection</string>
</resources>
